fix spacing and coloring

--- a/src/styles/NavButtons.scss
+++ b/src/styles/NavButtons.scss
@@ -12,15 +12,17 @@ $header-height: 8vh;
   background: none;
   border: 0;
   bottom: 8vh;
+  color: $primary-1-color;
   display: flex;
   left: 40px;
   position: absolute;
 
   &-text {
-    color: #121538;
+    color: $text-color;
     font-size: 24px;
     font-style: normal;
     font-weight: 400;
+    left: 13px;
     position: relative;
     top: 2px;
   }
@@ -34,16 +36,18 @@ $header-height: 8vh;
   background: none;
   border: 0;
   bottom: 8vh;
+  color: $primary-1-color;
   display: flex;
   position: absolute;
   right: 40px;
 
   &-text {
-    color: #121538;
+    color: $text-color;
     font-size: 24px;
     font-style: normal;
     font-weight: 400;
     position: relative;
+    right: 13px;
     top: 2px;
   }
 
